fix(client): badge alignment in segments of distribution

--- a/packages/client/src/app/modules/distributions/distribution-page.scss
+++ b/packages/client/src/app/modules/distributions/distribution-page.scss
@@ -29,6 +29,10 @@ ion-segment-button {
     margin-top: 0;
     margin-bottom: 0;
   }
+
+  ion-badge {
+    margin-left: .2rem;
+  }
 }
 
 ion-list {
